fix: star button alignment 4

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -23,7 +23,7 @@
     border: 3px solid green;
     margin: 0;
     position: absolute;
-    top: 50%;
+    top: 19%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
